Updated Consent Audit Log model

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4806,8 +4806,8 @@ font-style: italic;
     <h3><a name="ConsentAuditLogModel_inner_statusChange"><code>ConsentAuditLogModel_inner_statusChange</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>Status change.</div>
     <div class="field-items">
-      <div class="param">new (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> New status. </div>
-<div class="param">old (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Old status. </div>
+      <div class="param">new </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> New status. </div>
+<div class="param">old </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Old status. </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
