Updated Consent Credential model

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4816,7 +4816,7 @@ font-style: italic;
     <div class="field-items">
       <div class="param">activeFrom </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active from date time stamp. format: Unix time in ms</div>
 <div class="param">activeUntil </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active until date time stamp. format: Unix time in ms, nullable</div>
-<div class="param">token (optional)</div><div class="param-desc"><span class="param-type"><a href="#UUID">UUID</a></span> Access token. format: uuid</div>
+<div class="param">token </div><div class="param-desc"><span class="param-type"><a href="#UUID">UUID</a></span> Access token. format: uuid</div>
 <div class="param">state </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> State of the credential. </div>
     </div>  <!-- field-items -->
   </div>
