Updated response type

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -1238,7 +1238,7 @@ font-style: italic;
 
     <h3 class="field-label">Return type</h3>
     <div class="return-type">
-      <a href="#ConsentsModel">ConsentsModel</a>
+      <a href="#ConsentUrlsAndConsentAccessTokensModel">ConsentUrlsAndConsentAccessTokensModel</a>
       
     </div>
 
@@ -1258,7 +1258,7 @@ font-style: italic;
     <h3 class="field-label">Responses</h3>
     <h4 class="field-label">200</h4>
     200 Successful execution.
-        <a href="#ConsentsModel">ConsentsModel</a>
+        <a href="#ConsentUrlsAndConsentAccessTokensModel">ConsentUrlsAndConsentAccessTokensModel</a>
     <h4 class="field-label">400</h4>
     [400,600&gt; Unsuccessful execution.
         <a href="#"></a>
@@ -4562,8 +4562,8 @@ font-style: italic;
     <li><a href="#ConsentModel_links"><code>ConsentModel_links</code> - </a></li>
     <li><a href="#ConsentNotificationMessageModel_payload"><code>ConsentNotificationMessageModel_payload</code> - </a></li>
     <li><a href="#ConsentRequestMessageModel_payload"><code>ConsentRequestMessageModel_payload</code> - </a></li>
-    <li><a href="#ConsentsModel"><code>ConsentsModel</code> - </a></li>
-    <li><a href="#ConsentsModel_inner"><code>ConsentsModel_inner</code> - </a></li>
+    <li><a href="#ConsentUrlsAndConsentAccessTokensModel"><code>ConsentUrlsAndConsentAccessTokensModel</code> - </a></li>
+    <li><a href="#ConsentUrlsAndConsentAccessTokensModel_inner"><code>ConsentUrlsAndConsentAccessTokensModel_inner</code> - </a></li>
     <li><a href="#DataServiceUrlModel"><code>DataServiceUrlModel</code> - </a></li>
     <li><a href="#DataTypeModel"><code>DataTypeModel</code> - </a></li>
     <li><a href="#DataTypeModel_links"><code>DataTypeModel_links</code> - </a></li>
@@ -4894,17 +4894,17 @@ font-style: italic;
     </div>  <!-- field-items -->
   </div>
   <div class="model">
-    <h3><a name="ConsentsModel"><code>ConsentsModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
-    <div class='model-description'>List of Consents.</div>
+    <h3><a name="ConsentUrlsAndConsentAccessTokensModel"><code>ConsentUrlsAndConsentAccessTokensModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'>List of Consent Urls and Consent Access Tokens.</div>
     <div class="field-items">
           </div>  <!-- field-items -->
   </div>
   <div class="model">
-    <h3><a name="ConsentsModel_inner"><code>ConsentsModel_inner</code> - </a> <a class="up" href="#__Models">Up</a></h3>
-    <div class='model-description'>Consent Urls and access tokens.</div>
+    <h3><a name="ConsentUrlsAndConsentAccessTokensModel_inner"><code>ConsentUrlsAndConsentAccessTokensModel_inner</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    
     <div class="field-items">
-      <div class="param">consentUrl (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Consent Url. format: url</div>
-<div class="param">accessToken (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConsentAccessTokenModel">ConsentAccessTokenModel</a></span>  </div>
+      <div class="param">consentUrl </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Consent Url. format: url</div>
+<div class="param">accessToken </div><div class="param-desc"><span class="param-type"><a href="#ConsentAccessTokenModel">ConsentAccessTokenModel</a></span>  </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
