--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4562,6 +4562,7 @@ font-style: italic;
     <li><a href="#ConsentModel_links"><code>ConsentModel_links</code> - </a></li>
     <li><a href="#ConsentNotificationMessageModel_payload"><code>ConsentNotificationMessageModel_payload</code> - </a></li>
     <li><a href="#ConsentRequestMessageModel_payload"><code>ConsentRequestMessageModel_payload</code> - </a></li>
+    <li><a href="#ConsentStateEnum"><code>ConsentStateEnum</code> - </a></li>
     <li><a href="#ConsentUpdateModel"><code>ConsentUpdateModel</code> - </a></li>
     <li><a href="#ConsentUrlsAndConsentAccessTokensModel"><code>ConsentUrlsAndConsentAccessTokensModel</code> - </a></li>
     <li><a href="#ConsentUrlsAndConsentAccessTokensModel_inner"><code>ConsentUrlsAndConsentAccessTokensModel_inner</code> - </a></li>
@@ -4895,10 +4896,16 @@ font-style: italic;
     </div>  <!-- field-items -->
   </div>
   <div class="model">
+    <h3><a name="ConsentStateEnum"><code>ConsentStateEnum</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'></div>
+    <div class="field-items">
+          </div>  <!-- field-items -->
+  </div>
+  <div class="model">
     <h3><a name="ConsentUpdateModel"><code>ConsentUpdateModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>Consent update model.</div>
     <div class="field-items">
-      <div class="param">state (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> New state of the consent. </div>
+      <div class="param">state (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConsentStateEnum">ConsentStateEnum</a></span> New state of the consent. </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
