Updated Consent State description

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4897,7 +4897,7 @@ font-style: italic;
   </div>
   <div class="model">
     <h3><a name="ConsentStateEnum"><code>ConsentStateEnum</code> - </a> <a class="up" href="#__Models">Up</a></h3>
-    <div class='model-description'></div>
+    <div class='model-description'>Consent State.</div>
     <div class="field-items">
           </div>  <!-- field-items -->
   </div>
@@ -4905,7 +4905,7 @@ font-style: italic;
     <h3><a name="ConsentUpdateModel"><code>ConsentUpdateModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>Consent update model.</div>
     <div class="field-items">
-      <div class="param">state (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConsentStateEnum">ConsentStateEnum</a></span> New state of the consent. </div>
+      <div class="param">state (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConsentStateEnum">ConsentStateEnum</a></span>  </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
