Updated Consent Granted Event model

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -5485,7 +5485,7 @@ font-style: italic;
     <div class="field-items">
       <div class="param">connectionUrl </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Connection Url. format: url</div>
 <div class="param">type </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Event type name. </div>
-<div class="param">extraData (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConsentGrantedEventModel_extraData">ConsentGrantedEventModel_extraData</a></span>  </div>
+<div class="param">extraData </div><div class="param-desc"><span class="param-type"><a href="#ConsentGrantedEventModel_extraData">ConsentGrantedEventModel_extraData</a></span>  </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
